--- a/css/orlando.css
+++ b/css/orlando.css
@@ -7,15 +7,38 @@ header {
 
 header .container {
     position: relative;
-    top: -29px;
     
 }
 
-header .header-black{
+header .header-black {
     height: 40px;
     background-color: #000;
 }
 
+header .header-black li { 
+    background-image: url("../img/clubs.png");
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin: 5px;
+
+}
+
+header .header-black li.club-01{
+    background-position: 0px 0px;
+}
+
+header .header-black li.club-02{
+    background-position: -48px 0px;
+}
+
+header .header-black li a{
+    width: 32px;
+    height: 32px;
+    display: block;
+
+}
+
 header #logotipo{
     position: absolute;
+    top: -20px;
 }
