--- a/css/orlando.css
+++ b/css/orlando.css
@@ -31,6 +31,84 @@ header .header-black li.club-02{
     background-position: -48px 0px;
 }
 
+header .header-black li.club-03{
+    background-position: -91px 0px;
+}
+
+header .header-black li.club-04{
+    background-position: -139px 0px;
+}
+
+header .header-black li.club-05{
+    background-position: -190px 0px;
+}
+
+header .header-black li.club-06{
+    background-position: -240px 0px;
+}
+
+header .header-black li.club-07{
+    background-position: -290px 0px;
+}
+
+header .header-black li.club-08{
+    background-position: -331px 0px;
+}
+
+header .header-black li.club-09{
+    background-position: -376px 0px;
+}
+
+header .header-black li.club-10{
+    background-position: -429px 0px;
+}
+
+header .header-black li.club-11{
+    background-position: -528px 0px;
+}
+
+header .header-black li.club-12{
+    background-position: -578px 0px;
+}
+
+header .header-black li.club-13{
+    background-position: -628px 0px;
+}
+
+header .header-black li.club-14{
+    background-position: -673px 0px;
+}
+
+header .header-black li.club-15{
+    background-position: -717px 0px;
+}
+
+header .header-black li.club-16{
+    background-position: -759px 0px;
+}
+
+header .header-black li.club-17{
+    background-position: -806px 0px;
+}
+
+header .header-black li.club-18{
+    background-position: -856px 0px;
+}
+
+header .header-black li.club-19{
+    background-position: -899px 0px;
+}
+
+header .header-black li.club-20{
+    background-position: -949px 0px;
+}
+
+header .header-black li.club-21{
+    background-position: -994px 0px;
+}
+
+
+
 header .header-black li a{
     width: 32px;
     height: 32px;
