--- a/css/orlando.css
+++ b/css/orlando.css
@@ -5,7 +5,10 @@
 header {
     height: 150px;
     width: 100%;
-    background-color: #5a2b8f;
+    background-color: rgba(94, 41, 154, 0.9);
+    z-index: 2;
+    position: absolute;
+    
     
 }
 
@@ -138,14 +141,12 @@ header #menu{
     margin-top: 35px;
     font-family: 'Lato', sans-serif;
     font-weight: 800;
-    
 
 
 }
 
 header #menu a:hover{
     border-radius: 3px;
-
     transition: 0.3s;
     color: #000;
 
@@ -161,13 +162,12 @@ header nav ul.input-group{
 }
 
 header nav div.search{
-    width: 100%;
     float: end;
 }
  
 .btn{
     border: 2px 3px 4px 4px;
-    background-color: #131212;
+    background-color: #fdfdfd;
     font-weight: 800;
 
 }
@@ -175,12 +175,23 @@ header nav div.search{
 
 #search {
     box-sizing: border-box;
-    border-style:dotted;
+    border-style: dotted;
     border-radius: 8px;
 }
 
 #search-btn {
-    color: #ffffff;
+    color: #5a2b8f;
     border-radius: 25px;
+    border-style:dotted;
 }
 
+#menu a.seach .input-group {
+    top: 8px;
+}
+
+#banner {
+    width: 100%; height: 1200px;
+    background-repeat: no-repeat;    
+    background-image: url(../img/banner.jpg);
+    background-position: -1221px -1125px;
+}
