--- a/css/orlando.css
+++ b/css/orlando.css
@@ -194,4 +194,23 @@ header nav div.search{
     background-repeat: no-repeat;    
     background-image: url(../img/banner.jpg);
     background-position: -1221px -1125px;
+
+}
+
+section #banner h1 {
+    color: #fff;
+    top: 300px;
+    left: 100px;
+    position: relative;
+    font-size: 92px;
+    text-shadow: 2px 2px black;
+}
+
+section #banner small {
+    position: relative;
+    top: 300px;
+    left: 100px;
+    font-size: 32px;
+    color: #ffff;
+    text-shadow: 1px 1px black;
 }
