--- a/css/orlando.css
+++ b/css/orlando.css
@@ -251,5 +251,39 @@ div .noticia-1{
     font-size: 16px;
     width: 290px;
     flex-wrap: wrap;
+    margin: 20px;
 
+}
+
+div .noticia-2{
+    font-size: 16px;
+    width: 290px;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+div .noticia-3{
+    font-size: 16px;
+    width: 290px;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+div .noticia-4{
+    font-size: 16px;
+    width: 290px;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+
+@media(max-width:400px){
+    #banner h1{
+        display: none;
+    }
+    #banner small {
+        display: none;
+    }
+    #banner{
+        display: none;
+    }
 }
