--- a/css/orlando.css
+++ b/css/orlando.css
@@ -116,6 +116,7 @@ header .header-black li.club-21{
 }
 
 
+
 header .header-black li a{
     width: 42px;
     height: 32px;
@@ -136,7 +137,15 @@ header #menu a{
 
 }
 
+div .row{
+    width: 100%;
+    height: 55px;
+    display: flex;
+    justify-content:space-between;
+}
+
 #menu{
+    padding-left: 500px;
     flex-direction: row;
     display: flex;
     width: 100%;
@@ -147,6 +156,8 @@ header #menu a{
 }
 
 #menu ul{
+    display: flex;
+    justify-content: space-between;
     flex-wrap: nowrap;
 }
 
@@ -158,12 +169,13 @@ header #menu a:hover{
 }
 
 header nav a{
+    flex-grow: 1;
     margin-right: 38px;
 }
 
 header nav ul{
     display: flex;
-    width: 100vw;
+    width: 100%
 }
 
 header nav div.search{
