--- a/css/orlando.css
+++ b/css/orlando.css
@@ -249,14 +249,17 @@ section #banner small {
 }
 
 .row-thumbnails{
+    box-sizing: border-box;
     display: flex;
-    width: 100%;
-    align-content: center;
+    justify-content: space-around;
+    width: 84%;
     flex-wrap: wrap;
     flex-direction: row;
-    margin-left: 50px;
 
+    align-content: center;
+    margin: 1vw auto; 
 }
+
 
 .row-thumbnails h3{
     font-weight: bold;
