--- a/css/orlando.css
+++ b/css/orlando.css
@@ -131,10 +131,19 @@ header #logotipo{
 }
 
 header #menu a{
+    align-items: center;
     color: white;
     padding: 10px, 25px;
     text-decoration: none;
 
+}
+
+header #menu a.seach{
+    flex-wrap: nowrap;
+}
+dl, ol, ul {
+    margin-top: 0;
+    margin-bottom: -4rem;
 }
 
 div .row{
@@ -215,17 +224,18 @@ header nav div.search{
 }
 
 section #banner h1 {
+    width: 50%;
     color: #fff;
     top: 300px;
     left: 100px;
-    position: relative;
+    position: absolute;
     font-size: 92px;
     text-shadow: 2px 2px black;
 }
 
 section #banner small {
     position: relative;
-    top: 300px;
+    top: 397px;
     left: 110px;
     font-size: 32px;
     color: #ffff;
@@ -317,3 +327,22 @@ div .noticia-4{
         display: none;
     }
 }
+
+footer{
+    display: flex;
+    background-color: #5E299A;
+	width: 100%;
+	height: 194px;
+	text-align: center;
+}
+
+.container div h4{
+    flex-wrap: nowrap;
+    color: #ffffff;
+	text-transform: uppercase;
+	font-family: 'OpenSans-Light';
+	font-size: 40px;
+	margin: 36px;
+    text-shadow: 1px 1px 1px black;
+}
+
